Bug 1120149 - Add a hack to resolve an AWSY regression in Gecko 36. r=tn a=sylvestre