image/src/ProgressTracker.cpp
@@ -356,6 +356,25 @@ ProgressTracker::SyncNotifyInternal(ProxyArray& aProxies,
   }
 }
 
+Progress
+ProgressTracker::Difference(Progress aProgress) const
+{
+  Progress diff = ~mProgress & aProgress;
+
+  // XXX(seth): Hack to work around the fact that some observers have bugs and
+  // need to get onload blocking notifications multiple times. We should fix
+  // those observers and remove this.
+  if ((aProgress & FLAG_DECODE_COMPLETE) &&
+      (mProgress & FLAG_ONLOAD_BLOCKED) &&
+      (mProgress & FLAG_ONLOAD_UNBLOCKED)) {
+    MOZ_ASSERT(!(diff & FLAG_ONLOAD_BLOCKED));
+    MOZ_ASSERT(!(diff & FLAG_ONLOAD_UNBLOCKED));
+    diff |= FLAG_ONLOAD_BLOCKED | FLAG_ONLOAD_UNBLOCKED;
+  }
+
+  return diff;
+}
+
 void
 ProgressTracker::SyncNotifyProgress(Progress aProgress,
                                     const nsIntRect& aInvalidRect /* = nsIntRect() */)
